normalize displayed amount: adjust detalization

--- a/src/app/pages/planner/components/add-to-list-modal/add-to-list-modal.component.html
+++ b/src/app/pages/planner/components/add-to-list-modal/add-to-list-modal.component.html
@@ -66,14 +66,11 @@
           <ion-label>
             <h4>
               {{ getrecipyName(id) }}
-              <span *ngIf="ingredient.unit !== 13">
-                {{
-                  +childItem.amount
+              <span *ngIf="ingredient.unit !== 13" [innerHTML]="+childItem.amount
                     | convertToSelectedUnit
                       : childItem.product
                       : ingredient.unit
-                    | normalizeDisplayedAmount : ingredient.unit
-                }}
+                    | normalizeDisplayedAmount : ingredient.unit">                
               </span>
               <span *ngIf="ingredient.unit === 13"> за смаком </span>
               <span>{{ getUnitText(ingredient.unit) }}</span>
