init component for add purchase form

--- a/src/app/pages/user/components/expenses-page/expenses-page.component.html
+++ b/src/app/pages/user/components/expenses-page/expenses-page.component.html
@@ -4,9 +4,5 @@
 </app-header>
 
 <ion-content>
-    expenses page works
+    <ion-button expand="full" (click)="goRecordExpenses()">Record expenses</ion-button>
 </ion-content>
-
-<ng-template #noCollections>
-    
-</ng-template>
