--- a/src/app/shared/components/input-with-autocomplete/input-with-autocomplete.component.html
+++ b/src/app/shared/components/input-with-autocomplete/input-with-autocomplete.component.html
@@ -1,5 +1,6 @@
 <div class="ng-autocomplete" [ngClass]="{'selected': isSelected}">
     <ng-autocomplete #autocomplete [data]="suggestions"
+    [placeholder]="placeholder"
     (selected)="selectEvent($event)"
     (inputChanged)="inputItem = $event"
     (inputCleared)="onClearSearch()" [itemTemplate]="itemTemplate"
