--- a/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
+++ b/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
@@ -1,7 +1,7 @@
 <div class="ng-autocomplete" [ngClass]="{'product-selected': isSelected}">
   <ng-autocomplete #autocomplete [data]="products" [searchKeyword]="keyword" placeholder="Введіть назву продукту"
-    (selected)="selectEvent($event)" (inputCleared)="onClearSearch()" [itemTemplate]="itemTemplate"
-    [notFoundTemplate]="isAddNewProductEnabled? notFoundAddNewTemplate : notFoundTemplate">
+    (selected)="selectEvent($event)" (inputCleared)="onClearSearch()" (inputChanged)="inputItem = $event" [itemTemplate]="itemTemplate"
+    [notFoundTemplate]="isAddNewProductEnabled? notFoundAddNewTemplate : addNewProductAsOther? addAsOther : notFoundTemplate">
   </ng-autocomplete>
 
   <ng-template #itemTemplate let-item>
@@ -10,6 +10,9 @@
 
   <ng-template #notFoundTemplate let-notFound>
     <div [innerHTML]="notFound"></div>
+  </ng-template>
+  <ng-template #addAsOther let-notFound>
+    <div [innerHTML]="inputItem" (click)="onAddAsOther()"></div>
   </ng-template>
   <ng-template #notFoundAddNewTemplate>
     <ion-button (click)="addNewProduct()" expand="block" size="small">
