clear autocompletes on submit

--- a/src/app/expenses/record-expenses-page/record-expenses.component.html
+++ b/src/app/expenses/record-expenses-page/record-expenses.component.html
@@ -5,19 +5,19 @@
 <ion-content>
     <div class="form-container">
         <div>
-            <app-product-autocomplete #withAutocomplete *ngIf="products$ | async" [products]="products" [addNewProductAsOther]="true"
+            <app-product-autocomplete #productAutocomplete *ngIf="products$ | async" [products]="products" [addNewProductAsOther]="true"
                 (productSelected)="onProductSelected($event)"></app-product-autocomplete>
         </div>
         <div>
-            <app-input-with-autocomplete [suggestions]="brandNames" [placeholder]="'Точна назва товару'"
+            <app-input-with-autocomplete #titleAutocomplete [suggestions]="brandNames" [placeholder]="'Точна назва товару'"
                 (itemSelected)="title = $event"></app-input-with-autocomplete>
         </div>
         <div>
-            <app-input-with-autocomplete [suggestions]="brandNames" [placeholder]="'Торгова марка виробника'"
+            <app-input-with-autocomplete #brandAutocomplete [suggestions]="brandNames" [placeholder]="'Торгова марка виробника'"
                 (itemSelected)="brand = $event"></app-input-with-autocomplete>
         </div>
         <div>
-            <app-input-with-autocomplete [suggestions]="brandNames" [placeholder]="'Місце придбання'"
+            <app-input-with-autocomplete #placeAutocomplete [suggestions]="brandNames" [placeholder]="'Місце придбання'"
                 (itemSelected)="purchasePlace = $event"></app-input-with-autocomplete>
         </div>
         <ion-item lines="none" [color]="+amount > 0? 'tertiary':''">
