record expenses: product

--- a/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
+++ b/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
@@ -1,6 +1,6 @@
 <div class="ng-autocomplete" [ngClass]="{'product-selected': isSelected}">
   <ng-autocomplete #autocomplete [data]="products" [searchKeyword]="keyword" placeholder="Введіть назву продукту"
-    (selected)="selectEvent($event)" (inputCleared)="onClearSearch()" (inputChanged)="inputItem = $event" [itemTemplate]="itemTemplate"
+    (selected)="selectEvent($event)" (inputCleared)="onClearSearch()" [itemTemplate]="itemTemplate"
     [notFoundTemplate]="isAddNewProductEnabled? notFoundAddNewTemplate : addNewProductAsOther? addAsOther : notFoundTemplate">
   </ng-autocomplete>
 
@@ -12,7 +12,10 @@
     <div [innerHTML]="notFound"></div>
   </ng-template>
   <ng-template #addAsOther let-notFound>
-    <div [innerHTML]="inputItem" (click)="onAddAsOther()"></div>
+    <div [innerHTML]="'Product does not exist, add as other'" (click)="onAddAsOther()"></div>
+    <ion-button (click)="addNewProduct()" expand="block" size="small">
+      Додати в базу даних
+    </ion-button>
   </ng-template>
   <ng-template #notFoundAddNewTemplate>
     <ion-button (click)="addNewProduct()" expand="block" size="small">
