--- a/src/app/expenses/record-expenses-page/record-expenses.component.html
+++ b/src/app/expenses/record-expenses-page/record-expenses.component.html
@@ -5,20 +5,24 @@
 <ion-content>
     <div class="form-container">
         <div>
-            <app-product-autocomplete #productAutocomplete *ngIf="products$ | async" [products]="products" [addNewProductAsOther]="true"
+            <app-product-autocomplete #productAutocomplete *ngIf="products$ | async" [products]="products"
+                [addNewProductAsOther]="true" (onAddProduct)="showAddProduct = true"
                 (productSelected)="onProductSelected($event)"></app-product-autocomplete>
         </div>
-        <div>
-            <app-input-with-autocomplete #titleAutocomplete [suggestions]="titleAutocompleteOptions" [placeholder]="'Точна назва товару'"
-                (itemSelected)="title = $event"></app-input-with-autocomplete>
+        <div *ngIf="showAddProduct">
+            <app-add-product-form (productAdded)="showAddProduct = false"></app-add-product-form>
         </div>
         <div>
-            <app-input-with-autocomplete #brandAutocomplete [suggestions]="brandAutocompleteOptions" [placeholder]="'Торгова марка виробника'"
-                (itemSelected)="brand = $event"></app-input-with-autocomplete>
+            <app-input-with-autocomplete #titleAutocomplete [suggestions]="titleAutocompleteOptions"
+                [placeholder]="'Точна назва товару'" (itemSelected)="title = $event"></app-input-with-autocomplete>
         </div>
         <div>
-            <app-input-with-autocomplete #placeAutocomplete [suggestions]="placeAutocomleteOptions" [placeholder]="'Місце придбання'"
-                (itemSelected)="purchasePlace = $event"></app-input-with-autocomplete>
+            <app-input-with-autocomplete #brandAutocomplete [suggestions]="brandAutocompleteOptions"
+                [placeholder]="'Торгова марка виробника'" (itemSelected)="brand = $event"></app-input-with-autocomplete>
+        </div>
+        <div>
+            <app-input-with-autocomplete #placeAutocomplete [suggestions]="placeAutocomleteOptions"
+                [placeholder]="'Місце придбання'" (itemSelected)="purchasePlace = $event"></app-input-with-autocomplete>
         </div>
         <ion-item lines="none" [color]="+amount > 0? 'tertiary':''">
             <ion-input type="tel" label="Кількість:" [(ngModel)]="amount"></ion-input>
