real cost calculator

--- a/src/app/expenses/record-expenses-page/record-expenses.component.html
+++ b/src/app/expenses/record-expenses-page/record-expenses.component.html
@@ -38,9 +38,13 @@
                 </ion-chip>
             </div>
         </div>
-        <ion-item lines="none" [color]="+cost > 0? 'tertiary':''">
+        <ion-item lines="none" [color]="+cost > 0? 'tertiary':''" (click)="isShowCostCalculator = !isShowCostCalculator">
             <ion-input type="tel" label="Вартість:" [(ngModel)]="cost"></ion-input>
         </ion-item>
+        <div *ngIf="isShowCostCalculator" class="padding-inline">
+            <ion-input type="tel" label="Початкова вартість:" [(ngModel)]="originalCost" (ngModelChange)="calculateCost()"></ion-input>
+            <ion-input type="tel" label="Знижка:" [(ngModel)]="discount" (ngModelChange)="calculateCost()"></ion-input>
+        </div>
         <div>
             <ion-item color="tertiary" (click)="isShowCurrencyPicker = !isShowCurrencyPicker" lines="none">
                 <ion-label>Валюта: {{ getCurrencyText(currency)}}</ion-label>
