expenses history: init and navigation

--- a/src/app/pages/user/components/expenses-page/expenses-page.component.html
+++ b/src/app/pages/user/components/expenses-page/expenses-page.component.html
@@ -4,5 +4,6 @@
 </app-header>
 
 <ion-content>
-    <ion-button expand="full" (click)="goRecordExpenses()">Record expenses</ion-button>
+    <ion-item detail="true" (click)="goRecordExpenses()">Record expenses</ion-item>
+    <ion-item detail="true" (click)="goReviewExpenses()">Expenses Overview</ion-item>
 </ion-content>
