--- a/src/app/pages/user/components/expenses-page/expenses-page.component.html
+++ b/src/app/pages/user/components/expenses-page/expenses-page.component.html
@@ -6,4 +6,5 @@
 <ion-content>
     <ion-item detail="true" (click)="goRecordExpenses()">Record expenses</ion-item>
     <ion-item detail="true" (click)="goReviewExpenses()">Expenses Overview</ion-item>
+    <ion-item detail="true" (click)="goCheckPrice()">Перевірити ціну</ion-item>
 </ion-content>
