filters for expense pages; fixed filter trigger

--- a/src/app/expenses/check-price-page/check-price-page.component.html
+++ b/src/app/expenses/check-price-page/check-price-page.component.html
@@ -1,6 +1,7 @@
 <app-header>
     <p title>Перевірити ціну</p>
+    <app-filters right-button [isExpensePage]="true" [pageId]="'check-price'"></app-filters>
 </app-header>
 <ion-content>
-
+    
 </ion-content>
