--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -9,7 +9,7 @@
         </ion-buttons>
         <ion-title>Виберіть рецепт</ion-title>
         <ion-buttons slot="end" *ngIf="(collectionSelected$ | async)">
-          <app-filters></app-filters>
+          <app-filters [pageId]="'add-recipy-to-cal'"></app-filters>
         </ion-buttons>
 
       </ion-toolbar>
