--- a/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
+++ b/src/app/pages/recipies/pages/all-recipies-page/recipies.page.html
@@ -1,6 +1,6 @@
 <app-header>
   <span left-button><app-search-recipies-filter></app-search-recipies-filter></span>
-  <app-filters right-button></app-filters>
+  <app-filters right-button [pageId]="'all-recipies'"></app-filters>
 </app-header>
 
 <ion-content #scrollingContainer [fullscreen]="true" (ionScroll)="onscroll($event)" [scrollEvents]="true">
