--- a/src/app/expenses/check-price-page/check-price-page.component.html
+++ b/src/app/expenses/check-price-page/check-price-page.component.html
@@ -3,5 +3,9 @@
     <app-filters right-button [isExpensePage]="true" [pageId]="'check-price'"></app-filters>
 </app-header>
 <ion-content>
-    
+    <div class="expense-items-list">
+        <ng-container *ngFor="let item of expenseItemsToDisplay$ | async">
+            <app-view-expense-item [expenseItem]="item"></app-view-expense-item>
+        </ng-container>
+    </div>
 </ion-content>
