active filter widget for expenses

--- a/src/app/filters/components/filters/filters.component.html
+++ b/src/app/filters/components/filters/filters.component.html
@@ -57,6 +57,7 @@
 
 <ng-template #ExpensesTemplate>
   <ion-content class="ion-padding">
+    <app-active-filters-expenses-widget></app-active-filters-expenses-widget>
     <ion-accordion-group>
       <ion-accordion value="first">
         <ion-item slot="header" color="light">
