--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,14 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
-
+          <ion-menu-toggle autoHide="false">
+            <ion-item routerLink="/tabs/expenses/check-price" routerLinkActive="active" routerDirection="root" detail="false">
+              <ion-icon slot="start" name="search-outline"></ion-icon>
+              <ion-label>
+                Перевірити ціну
+              </ion-label>
+            </ion-item>
+          </ion-menu-toggle>
           <ion-menu-toggle autoHide="false">
             <ion-item button (click)="logout()" detail="false">
               <ion-icon slot="start" name="log-out"></ion-icon>
