--- a/src/app/shared/components/input-with-autocomplete/input-with-autocomplete.component.html
+++ b/src/app/shared/components/input-with-autocomplete/input-with-autocomplete.component.html
@@ -1,6 +1,7 @@
 <div class="ng-autocomplete" [ngClass]="{'selected': isSelected}">
     <ng-autocomplete #autocomplete [data]="suggestions"
     [placeholder]="placeholder"
+    [initialValue]="initialValue"
     (selected)="selectEvent($event)"
     (inputChanged)="inputItem = $event"
     (inputCleared)="onClearSearch()" [itemTemplate]="itemTemplate"
