--- a/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
+++ b/src/app/shared/components/product-autocomplete/product-autocomplete.component.html
@@ -1,6 +1,7 @@
 <div class="ng-autocomplete" [ngClass]="{'product-selected': isSelected}">
-  <ng-autocomplete #autocomplete [data]="products" [searchKeyword]="keyword" placeholder="Введіть назву продукту"
-    (selected)="selectEvent($event)" (inputCleared)="onClearSearch()" [itemTemplate]="itemTemplate"
+  <ng-autocomplete #autocomplete [data]="productsToDisplay" [searchKeyword]="keyword"
+    placeholder="Введіть назву продукту" (selected)="selectEvent($event)" (inputCleared)="onClearSearch()"
+    [itemTemplate]="itemTemplate" [initialValue]="initialValue"
     [notFoundTemplate]="isAddNewProductEnabled? notFoundAddNewTemplate : addNewProductAsOther? addAsOther : notFoundTemplate">
   </ng-autocomplete>
 
