check price search functionality

--- a/src/app/expenses/check-price-page/check-price-page.component.html
+++ b/src/app/expenses/check-price-page/check-price-page.component.html
@@ -1,5 +1,6 @@
 <app-header>
-    <p title>Перевірити ціну</p>
+    <ion-searchbar title class="searchbar" placeholder="Пошук за назвою" show-clear-button="always" [debounce]="500"
+        (ionInput)="onSearch($event)" (ionClear)="clear()"></ion-searchbar>
     <app-filters right-button [isExpensePage]="true" [pageId]="'check-price'"></app-filters>
 </app-header>
 <ion-content>
