recipy cost feature

--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -78,6 +78,7 @@
                         </ng-container>
                       </ng-container>
                     </div>
+                    <app-cost-of-recipy [ingredients]="recipy.ingrediends" [isFullscreenModal]="true"></app-cost-of-recipy>
                   </div>
                 </div>
                 <div class="recipy-photo" *ngIf="recipy.photo">
