--- a/src/app/pages/admin/components/admin-table/admin-table.component.scss
+++ b/src/app/pages/admin/components/admin-table/admin-table.component.scss
@@ -3,16 +3,6 @@
   max-height: 85vh;
   overflow: auto;
   position: relative;
-  tr:first-child {
-    td {
-      position: sticky;
-      top: 0;
-      background-color: var(--ion-color-tertiary);
-    }
-    td:not(:first-child) {
-      z-index: 2;
-    }
-  }
   td {
     user-select: text;
     border: 1px solid var(--ion-color-light);
@@ -31,4 +21,19 @@
   .hidden {
     display: none;
   }
+}
+
+th{
+  position: sticky;
+  top: 0;
+  background-color: var(--ion-color-tertiary);
+  padding-inline: 5px;
+  &:not(:first-child) {
+    z-index: 2;
+  }
+}
+
+.header-content{
+  display: flex;
+  align-items: center;
 }
