--- a/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
+++ b/src/app/pages/calendar/components/add-recipy-modal/add-recipy-modal.component.html
@@ -62,7 +62,7 @@
 
                     <span *ngIf="recipy.calorificValue">{{ Math.round(recipy.calorificValue) }} ккал в 100гр.</span>
                     <div *ngIf="recipy.portionSize">Рекомендований розмір порції: {{recipy.portionSize}}гр.</div>
-                    <div *ngIf="recipy.lastPrepared">Дата: {{recipy.lastPrepared}}</div>
+                    <div *ngIf="recipy.lastPrepared">Востаннє приготовано: {{recipy.lastPrepared | lastPreparedDate }}</div>
                     <div class="collection-tags">
                       <span>Теги: </span>
                       <ion-chip class="collection-chip" *ngFor="let tag of recipy.type">{{
