--- a/src/app/comments/comments-block/comments-block.component.html
+++ b/src/app/comments/comments-block/comments-block.component.html
@@ -7,9 +7,34 @@
             <ion-icon name="thumbs-up-outline" slot="start"></ion-icon>
             Подобається
         </ion-button>
-        <ion-button fill="clear">
+        <ion-button fill="clear" [id]="modalId">
             <ion-icon name="chatbubble-outline" slot="start"></ion-icon>
             Коментувати
         </ion-button>
     </div>
 </div>
+
+<ion-modal [trigger]="modalId" [initialBreakpoint]="0.8" (ionModalDidPresent)="onModalPresented()">
+    <ng-template>
+
+        <ion-content class="ion-padding">
+            <div class="comments-modal-content-container">
+                <div class="existing-comments">
+                    <ng-container *ngIf="(comments$ | async)?.length; else noComments">
+                        <ng-container *ngFor="let comment of (comments$ | async)">
+                            <app-comment [comment]="comment"></app-comment>
+                        </ng-container>
+                    </ng-container>
+                </div>
+                <ion-item class="comment-input" slot="fixed">
+                    <ion-textarea #textarea type="text" placeholder="Напишіть коментар..."
+                        [(ngModel)]="text"></ion-textarea>
+                    <ion-button size="small" fill="clear" (click)="saveComment()" [disabled]="text.length < 5"><ion-icon name="save-outline" slot="icon-only"></ion-icon></ion-button>
+                </ion-item>
+            </div>
+
+        </ion-content>
+    </ng-template>
+</ion-modal>
+
+<ng-template #noComments></ng-template>
